--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,102 +1,109 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_height="fill_parent"
     android:background="@color/primary"
-    tools:context=".WelcomeActivity" >
+    tools:context=".WelcomeActivity"
+    android:weightSum="5.0"
+    android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:contentDescription="LinkU Logo"
-        android:src="@drawable/linku_logo_white"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="72dp"
-        android:layout_marginLeft="72dp"
-        android:layout_marginRight="72dp" />
 
-    <TextView
-        android:id="@+id/slogan"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/imageViewContainer"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/slogan"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
-        android:textColor="@android:color/white"
-        android:gravity="center_horizontal|fill_vertical"
-        android:layout_below="@+id/imageView"
-        android:layout_marginTop="16dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_weight="2.0"
+        android:gravity="center_horizontal">
+
+        <ImageView
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:contentDescription="LinkU Logo"
+            android:src="@drawable/linku_logo_white"
+            android:baselineAlignBottom="false"
+            android:layout_gravity="bottom" />
+
+    </LinearLayout>
+
 
     <LinearLayout
         style="@style/LoginFormContainer"
         android:orientation="vertical"
-        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/slogan">
+        android:layout_below="@+id/imageViewContainer"
+        android:layout_weight="3.0"
+        android:weightSum="11">
 
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/prompt_username"
-            android:inputType="textEmailAddress"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:textColor="@android:color/white"
-            android:textColorHint="@color/hint"
-            style="@style/Base.Widget.AppCompat.EditText"
-            android:backgroundTint="#ffffffff" />
+            android:layout_weight="4"
+            android:clickable="true"
+            android:gravity="bottom">
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/prompt_password"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:imeActionId="@+id/edittext_action_login"
-            android:imeActionLabel="@string/login"
-            android:imeOptions="actionUnspecified"
-            android:textColor="@android:color/white"
-            android:textColorHint="#4bffffff"
-            android:textIsSelectable="false"
-            android:backgroundTint="#ffffffff" />
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_username"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@android:color/white"
+                android:textColorHint="@color/hint"
+                style="@style/Base.Widget.AppCompat.EditText"
+                android:backgroundTint="@color/white30"
+                android:textSize="@dimen/hint" />
 
-        <Button
-            android:id="@+id/login_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/login"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
-            android:textColor="@android:color/white"
-            android:layout_marginBottom="16dp"
-            android:layout_gravity="right"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:elevation="2dp"
-            android:background="@color/accent" />
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_password"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:imeActionId="@+id/edittext_action_login"
+                android:imeActionLabel="@string/login"
+                android:imeOptions="actionUnspecified"
+                android:textColor="@android:color/white"
+                android:textColorHint="@color/hint"
+                android:textIsSelectable="false"
+                android:backgroundTint="@color/white30"
+                android:clickable="false"
+                android:textSize="@dimen/hint"
+                android:layout_marginTop="@dimen/login_form_margin" />
+
+            <Button
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/login"
+                style="?android:attr/borderlessButtonStyle"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
+                android:textColor="@android:color/white"
+                android:layout_gravity="right"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center">
+            android:layout_weight="5"
+            android:gravity="center_horizontal|bottom"
+            android:paddingBottom="@dimen/activity_vertical_margin">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-                android:textColor="@android:color/white"
+                android:textColor="@color/white85"
                 android:text="Don&apos;t have an account yet?" />
 
             <Button
@@ -105,9 +112,10 @@
                 android:layout_height="wrap_content"
                 android:text="@string/signup"
                 style="?android:attr/borderlessButtonStyle"
-                android:textColor="@color/accent"
+                android:textColor="@android:color/white"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />
         </LinearLayout>
 
     </LinearLayout>
-</RelativeLayout>
+
+</LinearLayout>
