--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,11 @@
     <color name="body_grey">#8a000000</color>
 
     <color name="divider_grey">#1f000000</color>
+    <color name="white30">#4dffffff</color>
+    <color name="white60">#99ffffff</color>
+    <color name="white85">#d9ffffff</color>
 
-    <color name="hint">#4bffffff</color>
+    <color name="hint">#99ffffff</color>
 
     <!-- Text colors -->
     <color name="black_87">#DB000000</color>
