--- a/app/src/main/res/layout/events_list_item.xml
+++ b/app/src/main/res/layout/events_list_item.xml
@@ -50,6 +50,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/event_place"
+                        android:text="@string/placeholder_events_item_location"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
