--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -2,11 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    android:animateLayoutChanges="true"    >
-
-    <include layout="@layout/toolbar_actionbar" />
-
+    xmlns:fab="http://schemas.android.com/apk/res-auto">
     <com.bdlabs_linku.linku.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
         xmlns:fab="http://schemas.android.com/apk/res-auto"
@@ -22,7 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipChildren="false">
-
 
             <!-- Background photo -->
             <FrameLayout android:id="@+id/session_photo_container"
@@ -49,6 +44,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/description"
+                    android:text="Lorem"
                     android:layout_marginLeft="@dimen/keyline_1"
                     android:layout_marginRight="@dimen/keyline_1"
                     android:textSize="14sp"
@@ -69,17 +65,35 @@
                     android:layout_gravity="center_vertical"
                     android:gravity="center_vertical" />
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="Jane Doe"
                     android:layout_marginLeft="@dimen/keyline_2"
                     android:layout_marginRight="@dimen/keyline_1"
-                    android:layout_marginBottom="24dp"
-                    android:id="@+id/attendees">
+                    android:textSize="12sp"
+                    android:textColor="@color/body_dark"
+                    android:layout_marginBottom="24dp" />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="John Doe"
+                    android:layout_marginLeft="@dimen/keyline_2"
+                    android:layout_marginRight="@dimen/keyline_1"
+                    android:textSize="12sp"
+                    android:textColor="@color/body_dark"
+                    android:layout_marginBottom="24dp" />
 
-                </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Leo White"
+                    android:layout_marginLeft="@dimen/keyline_2"
+                    android:layout_marginRight="@dimen/keyline_1"
+                    android:textSize="12sp"
+                    android:textColor="@color/body_dark"
+                    android:layout_marginBottom="24dp" />
 
                 <RelativeLayout
                     android:layout_width="fill_parent"
@@ -142,51 +156,59 @@
             <!-- Title/subtitle bar (floating; position determined at run time as the content view scrolls) -->
             <LinearLayout
                 android:id="@+id/header_session"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="?android:actionBarSize"
-                android:gravity="center_vertical"
-                android:paddingBottom="8dp">
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                android:orientation="vertical"
+                android:paddingBottom="16dp">
+
+                <include layout="@layout/toolbar_actionbar" />
 
                 <!-- Session title -->
                 <TextView android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:layout_marginBottom="0dp"
+                    android:text="@string/placeholder_events_item_name"
                     android:id="@+id/session_title"
-                    android:maxLines="1"
+                    android:maxLines="4"
                     android:ellipsize="end"
+                    android:lineSpacingMultiplier="1.1"
+                    android:textAlignment="viewStart"
+                    android:layout_gravity="start"
                     android:layout_marginLeft="@dimen/keyline_2"
                     android:layout_marginRight="@dimen/keyline_1"
                     android:textColor="#fff"
                     android:textIsSelectable="false"
-                    android:textSize="20sp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="8dp" />
+                    android:textSize="20sp" />
 
                 <!-- Session subtitle -->
-                <RelativeLayout
+                <!--<RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/session_subtitle" >
+                    android:layout_height="wrap_content">-->
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/event_time"
+                        android:id="@+id/session_subtitle"
+                        android:text="@string/placeholder_events_item_time"
+
                         android:textColor="@android:color/white"
                         android:layout_marginLeft="@dimen/keyline_2"
                         android:layout_marginRight="@dimen/keyline_1"
                         android:textSize="14sp" />
 
-                    <TextView
+                    <!--<TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/event_place"
-                        android:layout_alignParentRight="true"
-                        android:textSize="14sp"
-                        android:textColor="@android:color/white"
-                        android:layout_marginRight="@dimen/keyline_1" />
-                </RelativeLayout>
+                        android:text="@string/placeholder_events_item_location"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:textColor="@color/body_grey"
+                        android:textSize="@dimen/body2" />-->
+                <!--</RelativeLayout>-->
             </LinearLayout>
 
 
