Edit Fragment and Activity

--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -36,7 +36,6 @@
                     android:scaleType="centerCrop" />
             </FrameLayout>
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -45,6 +44,7 @@
                 android:background="#fff"
                 android:paddingTop="16dp"
                 android:clipToPadding="false">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -148,6 +148,12 @@
                 android:minHeight="?android:actionBarSize"
                 android:gravity="center_vertical"
                 android:paddingBottom="8dp">
+                <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_down"
+                        android:id="@+id/edit_event_btn" android:layout_gravity="right"/>
+
 
                 <!-- Session title -->
                 <TextView android:layout_height="wrap_content"
@@ -204,4 +210,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:layout_gravity="right|bottom" />
+
 </FrameLayout>
