--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,6 +1,10 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".SignUpActivity" >
+    tools:context=".SignUpActivity"
+    tools:ignore="MergeRootFrame"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent" >
+
     <LinearLayout
         android:orientation="vertical"
         android:background="@color/primary"
@@ -24,7 +28,7 @@
                 android:id="@+id/textView"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                 android:textColor="@android:color/white"
-                android:layout_marginTop="@dimen/big_margin"
+                android:layout_marginTop="@dimen/keyline_2"
                 android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
         </LinearLayout>
@@ -45,7 +49,6 @@
                 android:maxLines="1"
                 android:singleLine="true"
                 android:textColorHint="@color/hint"
-                android:backgroundTint="@color/white30"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/hint" />
 
@@ -58,7 +61,6 @@
                 android:maxLines="1"
                 android:singleLine="true"
                 android:textColorHint="@color/hint"
-                android:backgroundTint="@color/white30"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/hint"
                 android:layout_marginTop="@dimen/login_form_margin" />
@@ -71,11 +73,10 @@
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:imeActionId="@+id/edittext_action_signup"
+                android:imeActionId="@+id/action_signup"
                 android:imeActionLabel="@string/signup"
                 android:imeOptions="actionUnspecified"
                 android:textColorHint="@color/hint"
-                android:backgroundTint="@color/white30"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/hint"
                 android:layout_marginTop="@dimen/login_form_margin" />
@@ -94,4 +95,4 @@
                 android:paddingRight="8dp" />
         </LinearLayout>
     </LinearLayout>
-</merge>
+</FrameLayout>
