--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -3,12 +3,13 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    android:animateLayoutChanges="true"    >
+    android:animateLayoutChanges="true"
+    android:theme="@style/AppThemeNoActionBar">
 
     <include layout="@layout/toolbar_actionbar" />
 
-    <com.bdlabs_linku.linku.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
+    <com.bdlabs_linku.linku.ObservableScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:fab="http://schemas.android.com/apk/res-auto"
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
@@ -202,6 +203,5 @@
         fab:fab_colorPressed="@color/primary"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
         android:layout_gravity="right|bottom" />
 </FrameLayout>
