--- a/app/src/main/res/layout/fragment_create_new_event.xml
+++ b/app/src/main/res/layout/fragment_create_new_event.xml
@@ -11,19 +11,17 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        >
+        android:paddingBottom="@dimen/activity_vertical_margin" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginLeft="@dimen/add_event_edit_horizontal_margin"
+            android:layout_marginLeft="@dimen/keyline_2_minus_16dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-        >
+            android:orientation="vertical" >
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/add_event_edit_height"
-                android:layout_marginBottom="@dimen/vertical_8_margin"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                 android:id="@+id/event_title_input"
                 android:inputType="text"
                 android:textColor="@color/black_87"
@@ -31,25 +29,24 @@
                 android:gravity="bottom|left"
                 android:hint="@string/placeholder_events_item_title"
                 android:textColorHint="@color/edit_hint"
-                android:background="#00000000"
-                android:imeOptions="actionDone" />
+                android:imeOptions="actionNext" />
 
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:background="@color/divider_grey"
-                android:layout_marginBottom="@dimen/vertical_8_margin" />
+                android:layout_marginBottom="@dimen/keyline_1_minus_8dp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginLeft="@dimen/add_event_edit_horizontal_margin"
+            android:layout_marginLeft="@dimen/keyline_2_minus_16dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/add_event_edit_height"
-                android:layout_marginBottom="@dimen/vertical_8_margin"
+                android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                 android:id="@+id/event_description_input"
                 android:inputType="text"
                 android:textColor="@color/black_87"
@@ -64,72 +61,82 @@
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:background="@color/divider_grey"
-                android:layout_marginBottom="@dimen/vertical_8_margin" />
+                android:layout_marginBottom="@dimen/keyline_1_minus_8dp" />
         </LinearLayout>
 
-        <!-- pick day and time -->
+        <!-- pick date and time -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="@dimen/vertical_8_margin" >
+            android:layout_marginBottom="@dimen/keyline_1_minus_8dp" >
             <ImageView
                 android:layout_width="@dimen/image_icon"
                 android:layout_height="@dimen/image_icon"
                 android:src="@drawable/ic_time"/>
-            <!-- pick day -->
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:orientation="vertical"
-                >
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/add_event_edit_height"
-                    android:layout_marginBottom="@dimen/vertical_8_margin"
-                    android:id="@+id/event_day_input"
-                    android:textColor="@color/edit_hint"
-                    android:textSize="@dimen/add_event_fields"
-                    android:textAllCaps="false"
-                    android:gravity="left|center_vertical"
-                    android:text="@string/placeholder_events_item_day"
-                    android:drawableRight="@drawable/ic_down"
-                    android:background="#00000000"
-                    android:onClick="dayPicker"
-                    />
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_grey"/>
-            </LinearLayout>
-            <!-- pick time -->
-            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:orientation="vertical"
-                >
-                <Button
-                    android:layout_width="fill_parent"
-                    android:layout_height="@dimen/add_event_edit_height"
-                    android:layout_marginBottom="@dimen/vertical_8_margin"
-                    android:id="@+id/event_time_input"
-                    android:textColor="@color/edit_hint"
-                    android:textSize="@dimen/add_event_fields"
-                    android:text="@string/placeholder_events_item_time"
-                    android:textAllCaps="false"
-                    android:gravity="left|center_vertical"
-                    android:drawableRight="@drawable/ic_down"
-                    android:background="#00000000"
-                    android:onClick="timePicker"
-                    />
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_grey"
-                    />
+                android:weightSum="2">
+
+                <!-- pick date -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:orientation="vertical"
+                    android:weightSum="2"
+                    android:layout_weight="1">
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="@dimen/add_event_edit_height"
+                        android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
+                        android:id="@+id/event_day_input"
+                        android:textColor="@color/edit_hint"
+                        android:textSize="@dimen/add_event_fields"
+                        android:textAllCaps="false"
+                        android:gravity="center_vertical|left"
+                        android:text="@string/placeholder_events_item_day"
+                        android:drawableRight="@drawable/ic_down"
+                        android:background="#00000000"
+                        android:onClick="datePicker"
+                        />
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/divider_grey"/>
+                </LinearLayout>
+
+                <!-- pick time -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:orientation="vertical"
+                    android:layout_weight="1" >
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="@dimen/add_event_edit_height"
+                        android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
+                        android:id="@+id/event_time_input"
+                        android:textColor="@color/edit_hint"
+                        android:textSize="@dimen/add_event_fields"
+                        android:text="@string/placeholder_events_item_time"
+                        android:textAllCaps="false"
+                        android:gravity="left|center_vertical"
+                        android:drawableRight="@drawable/ic_down"
+                        android:background="#00000000"
+                        android:onClick="timePicker"
+                        />
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/divider_grey"
+                        />
+                </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
 
         <!-- pick location -->
@@ -137,7 +144,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="@dimen/vertical_8_margin" >
+            android:layout_marginBottom="@dimen/keyline_1_minus_8dp" >
             <ImageView
                 android:layout_width="@dimen/image_icon"
                 android:layout_height="@dimen/image_icon"
@@ -152,7 +159,7 @@
                 <AutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/add_event_edit_height"
-                    android:layout_marginBottom="@dimen/vertical_8_margin"
+                    android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                     android:id="@+id/event_location_input"
                     android:inputType="text"
                     android:textColor="@color/black_87"
@@ -175,24 +182,39 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_marginLeft="@dimen/add_event_edit_horizontal_margin"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginBottom="@dimen/keyline_1_minus_8dp" >
 
-            <Spinner
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/cat_icon"
+                android:src="@drawable/ic_outdoor"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/category"
-                android:prompt="@string/placeholder_category"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp"/>
+                android:orientation="vertical"
+                android:layout_marginLeft="@dimen/keyline_1">
 
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/divider_grey"
-                android:layout_marginBottom="@dimen/vertical_8_margin" />
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/category"
+                    android:prompt="@string/placeholder_category"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp"/>
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/divider_grey" />
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
