--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="Widget.ActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
@@ -12,12 +12,18 @@
     </style>
 
     <style name="AppThemeNoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowNoTitle">true</item>
-        <!--We will be using the toolbar so no need to show ActionBar-->
-        <item name="android:windowActionBar">false</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+        <!-- Add logo to action bar -->
+        <item name="android:logo">@drawable/linku_logo_white</item>
+        <item name="android:displayOptions">useLogo|showHome</item>
+
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="homeAsUpIndicator">@drawable/ic_up</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_up</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 
     <style name="events_item_text_big">
@@ -80,5 +86,4 @@
         <item name="android:paddingLeft">56dp</item>
         <item name="android:paddingRight">56dp</item>
     </style>
-
 </resources>
