Dimens of create event also pre v21

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Screen margins -->
     <dimen name="activity_horizontal_margin">@dimen/keyline_1</dimen>
-    <dimen name="activity_vertical_margin">@dimen/keyline_1_minus_8dp</dimen>
+    <dimen name="activity_vertical_margin">@dimen/keyline_1</dimen>
     <!-- Keylines -->
     <dimen name="keyline_1">16dp</dimen>
     <dimen name="keyline_1_minus_8dp">8dp</dimen>
@@ -17,14 +17,15 @@
 
 
     <!-- Line heights -->
-    <dimen name="add_event_edit_height">32dp</dimen>
+    <dimen name="vertical_48dp">48dp</dimen>
 
     <!-- Other -->
     <dimen name="headerbar_elevation">4dp</dimen>
 
-    <dimen name="image_icon">40dp</dimen>
+    <dimen name="image_icon">24dp</dimen>
 
 
     <!-- Forms top margin -->
     <dimen name="login_form_margin">@dimen/keyline_1_minus_8dp</dimen>
+    <dimen name="vertical_48dp_minus_8dp">32dp</dimen>
 </resources>
