--- a/app/src/main/res/layout-v21/fragment_create_new_event.xml
+++ b/app/src/main/res/layout-v21/fragment_create_new_event.xml
@@ -67,7 +67,9 @@
                 android:layout_height="wrap_content"
                 android:weightSum="2"
                 android:layout_gravity="bottom"
-                android:gravity="bottom">
+                android:gravity="bottom"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp">
 
                 <!-- pick date -->
                 <LinearLayout
@@ -186,7 +188,9 @@
                 android:layout_height="fill_parent"
                 android:orientation="vertical"
                 android:layout_marginLeft="@dimen/keyline_1"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:paddingRight="4dp"
+                android:paddingLeft="4dp">
 
                 <Spinner
                     android:layout_width="match_parent"
