Capitalise form edittexts for create new event

--- a/app/src/main/res/layout-v21/fragment_create_new_event.xml
+++ b/app/src/main/res/layout-v21/fragment_create_new_event.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/event_title_input"
-                android:inputType="text"
+                android:inputType="textCapSentences"
                 android:textColor="@color/black_87"
                 android:textSize="@dimen/add_event_title"
                 android:hint="@string/placeholder_events_item_title"
@@ -40,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/event_description_input"
-                android:inputType="text"
+                android:inputType="textCapSentences"
                 android:textColor="@color/black_87"
                 android:textSize="@dimen/add_event_fields"
                 android:hint="@string/placeholder_events_item_description"
