--- a/app/src/main/res/layout/fragment_create_new_event.xml
+++ b/app/src/main/res/layout/fragment_create_new_event.xml
@@ -23,7 +23,7 @@
                 android:layout_height="@dimen/vertical_48dp_minus_8dp"
                 android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                 android:id="@+id/event_title_input"
-                android:inputType="text"
+                android:inputType="textCapSentences"
                 android:textColor="@color/black_87"
                 android:textSize="@dimen/add_event_title"
                 android:gravity="bottom|left"
@@ -49,7 +49,7 @@
                 android:layout_height="@dimen/vertical_48dp_minus_8dp"
                 android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                 android:id="@+id/event_description_input"
-                android:inputType="text"
+                android:inputType="textCapSentences"
                 android:textColor="@color/black_87"
                 android:textSize="@dimen/add_event_fields"
                 android:gravity="bottom|left"
