Added background and no image in view event if none was uploaded

--- a/app/src/main/res/layout-v21/fragment_create_new_event.xml
+++ b/app/src/main/res/layout-v21/fragment_create_new_event.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/scroll_view"
-    android:overScrollMode="never" >
+    android:overScrollMode="never"
+    android:background="@drawable/background_navbar">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -21,7 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/image_upload_placeholder" />
+                android:src="@drawable/image_upload_placeholder"
+                android:background="@drawable/background_navbar" />
 
             <ProgressBar
                 android:layout_width="wrap_content"
