--- a/app/src/main/res/layout/fragment_create_new_event.xml
+++ b/app/src/main/res/layout/fragment_create_new_event.xml
@@ -22,7 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/image_upload_placeholder" />
+                android:src="@drawable/image_upload_placeholder"
+                android:background="@drawable/background_navbar" />
 
             <ProgressBar
                 android:layout_width="wrap_content"
